<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infofarmer"
    android:orientation="vertical"
    android:background="@drawable/preview">

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:textColor="#3C5645"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Farmerinfo"/>

        <TextView
            android:textColor="#3C5645"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Info"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:backgroundTint=" #52be80 "
            android:hint="@string/name"
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            android:textColor=" #52be80 "
            android:textColorHint=" #52be80 "
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:backgroundTint=" #52be80 "
            android:hint="@string/phoneno"
            android:id="@+id/contact"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            android:textColor=" #52be80 "
            android:textColorHint=" #52be80 "
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:backgroundTint=" #52be80 "
            android:hint="@string/add"
            android:id="@+id/add"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:textColor=" #52be80 "
            android:textColorHint=" #52be80 "
            android:textSize="15sp" />
    </LinearLayout>



    <LinearLayout
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border">
    <TextView
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#fff"
        android:id="@+id/next"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:text="@string/next"
        android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>