<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".farmer_otp"
    android:orientation="vertical"
    android:background="@drawable/back2">

    <TextView
        android:layout_marginTop="110dp"
        android:layout_gravity="center"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp"
        android:textSize="30sp"/>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="270dp">
        <FrameLayout
            android:layout_margin="5dp"
            android:background="@drawable/bord"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/otp"
                    android:hint="@string/otpon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#26402F"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#26402F"
                    android:textColorHint="#26402F"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:id="@+id/login"
                    android:text="@string/Login"
                    android:textAlignment="center"
                    android:textColor="  #fff  "
                    android:textStyle="bold" />
            </FrameLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>