<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buyer"
    android:orientation="vertical"
    tools:context=".buyer_otp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:text="@string/otp"
        android:textColor="#fff"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="40dp"
        app:cardCornerRadius="30dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/bord">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/otp_buyer"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#154360"
                    android:hint="@string/otpon"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#154360"
                    android:textColorHint="#154360"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/bords">

                <TextView
                    android:id="@+id/login_buyer"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Login"
                    android:textAlignment="center"
                    android:textColor="  #fff  "
                    android:textStyle="bold" />
            </FrameLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>